cfn-template yaml.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    CloudFormation Template for Roman Numerals Converter Application. 
    This template creates Python Flask Web Application on Amazon Linux 2023  
    EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
    Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.
Parameters:
  myVPC:
    Description: choose your VPC
    Type: AWS::EC2::VPC::Id

  myKeyPair:
    Description: choose your keypair
    Type: AWS::EC2::KeyPair::KeyName

  myInstanceType:
    Description: choose your instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.nano

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

Resources:

  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref myInstanceType
      KeyName: !Ref myKeyPair
      SecurityGroupIds: 
        - !Ref webServerSecGrp # !GettAtt webServerSecGrp.GroupId
      Tags: 
        - Key: Name
          Value: !Sub Webser of ${AWS::StackName}
      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/sezzgi/romanconv/main"
        wget -P templates ${FOLDER}/templates/index.html
        wget -P templates ${FOLDER}/templates/result.html
        wget ${FOLDER}/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py


  webServerSecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows ssh, http and 8080 # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: osvaldo-roman-number-conventor
      VpcId: !Ref myVPC
  
Outputs:
  webServerURL:
    Description: Gives the URL of Webserver
    Value: !Sub 
      - http://${PIA}:8080
      - PIA: !GetAtt myWebServer.PublicDnsName


# Outputs:
#   WebsiteURL:
#     Value: !Join 
#       - ''
#       - - 'http://'
#         - !GetAtt myWebServer.PublicDnsName
#         - ':8080'
#     Description: Roman Numerals Converter Application URL
