cfn.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  CFN temp is for the roman conv

Parameters:
  myVPC:
    Description: choose your VPC
    Type: AWS::EC2::VPC::Id

  myKeyPair:
    Description: choose your key pair
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref latestAmiId
      InstanceType: t2.micro
      KeyName: !Ref myKeyPair
      SecurityGroupIds: 
        - !Ref mySecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 |
        #! /bin/bash 
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        dnf install git -y
        pip3 install flask
        cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/sezzgi/romanconv/main/"
        wget -P templates ${FOLDER}/templates/index.html
        wget -P templates ${FOLDER}/templates/result.html
        wget ${FOLDER}/roman-numerals-converter-app.py
        python3 app.py 

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ssh port
      GroupName: sezsecgrpromen
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      Parameters:
  myVPC:
    Description: choose your VPC
    Type: AWS::EC2::VPC::Id

Resources:

  webServerSecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows ssh, http and 8080 # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: sez-roman-number-conventor
      VpcId: !Ref myVPC
  
Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PIA}
      - PIA: !GetAtt myWebServer.PublicDnsName
    Description: Roman Numerals Converter Application URL
